--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -17,7 +17,7 @@
 .hero-registrations {
   width: 450px;
   height: 100px;
-  background-color: #fcd600;
+  background-color: #FCD600;
   position: absolute;
   z-index: 1;
   left: 80px;
