--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,12 +1,12 @@
 /* Hero.css */
 
 .hero-container {
-  width: 100%;
+  width: 100vw;
   margin: 0;
 }
 
 .hero-background {
-  width: 100%;
+  width: 100vw;
   height: 800px;
   background-color: black;
   position: relative;
@@ -15,7 +15,7 @@
 }
 
 .hero-registrations {
-  width: 450px;
+  width: 30vw;
   height: 100px;
   background-color: #FCD600;
   position: absolute;
@@ -27,7 +27,7 @@
   align-items: center;
   
   border-radius: 20px;
-  margin-left: 850px;
+  margin-left: 57vw;
 
 }
 
@@ -110,7 +110,7 @@
 }
 
 .hero-main-image {
-  width: 1520px;
+  width: 100vw;
   margin-top: -170px;
   margin-left: -420px;
 }
@@ -192,7 +192,7 @@
   }
 
   .hero-main-image {
-    width: 420px;
+    width: 102vw;
     margin-left: -30px;
     margin-top: -50px;
   }
