--- a/src/styles/Previous.css
+++ b/src/styles/Previous.css
@@ -2,7 +2,7 @@
 .previous-container {
   color: white;
   background-color: #3670FF;
-  width: 100%;
+  width: 100vw;
 
   display: flex;
   justify-content: center;
@@ -10,7 +10,7 @@
 }
 
 .previous-content {
-  width: 90%;
+  width: 100vw;
   max-width: 600px;
   display: flex;
   flex-direction: column;
@@ -56,7 +56,8 @@
   }
   .previous-container{
     margin-top: 1000px;
-    width: 390px;
+    width: 95vw;
+
   
   }
   .previous-content{
