--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -123,9 +123,9 @@
   }
 
   .hero-registrations {
-    width: 250px;
+    width: 65vw;
     height: 50px;
-    margin-left: 60px;
+    margin-left: 10vw;
     margin-top: 30px;
     border-radius: 0;
   }
