--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,23 @@
   font-style: normal;
 }
 
-*{
-  margin: 0;
-}
+
+ 
+  body {
+    margin: 0;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    
+  }
+
+  @media (max-width: 480px) {
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;  /* Prevent horizontal scroll */
+      width: 100%;
+    }
+  
+  }
