--- a/src/styles/Partners.css
+++ b/src/styles/Partners.css
@@ -27,22 +27,13 @@
 }
 
 .partner-logo {
-  width: 100px;
-  height: 60px;
+  width: 5vw;
+  height: 55px;
   margin: 10px;
 }
 
-/* Responsive Styling */
-@media (max-width: 768px) {
-  .partners-title {
-    font-size: 1.5rem;
-  }
 
-  .partner-logo {
-    width: 80px;
-    height: 50px;
-  }
-}
+
 
 @media (max-width: 480px) {
   .partners-title {
