--- a/src/styles/What.css
+++ b/src/styles/What.css
@@ -1,4 +1,4 @@
-/* Base styles */
+
 .what-container {
   font-family: 'CabinetGrotesk', sans-serif;
   font-size: 20px;
@@ -24,7 +24,7 @@
 
 .what-text {
   position: absolute;
-  margin-top: 250px;
+  margin-top: 15vw;
  margin-left: 650px;
 }
 .what-text p{
@@ -60,8 +60,6 @@
 
 }
 
-
-
 .what-paper-text {
   position: absolute;
   top: 50%;
@@ -74,14 +72,14 @@
   font-weight: bold;
 }
 
-/* Yearly stats sections */
 .yearly-stats {
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
-  margin-top: -100px;
+  margin-top: -10vw;
   height: 700px;
   justify-content: center;
+
 }
 .what-image{
   width: 300px;
@@ -107,7 +105,7 @@
   
 }
 .yellow-section h2{
-  margin-top: 250px;
+  margin-top: 200px;
   margin-bottom: 30px;
   margin-left: 50px;
   
@@ -116,11 +114,12 @@
   margin-left: 50px;
 }
 .yellow-section img{
-  margin-left: 70px;
-  margin-top: 30px;
+  margin-left: 45px;
+  margin-top: 20px;
+
 }
 .white-section h2{
-  margin-top: 250px;
+  margin-top: 200px;
   margin-bottom: 30px;
   margin-left: 50px;
 }
@@ -128,7 +127,7 @@
   margin-left: 50px;
 }
 .white-section img{
-  margin-left: 70px;
+  margin-left: 3vw;
 }
 
 /* Responsive styles */
@@ -165,13 +164,14 @@
    
   }
   .what-description{
-    margin-left: 30px;
+    margin-left: 22px;
     font-size: 15px;
    
   }
    .what-description p{
 
-    margin-top: -190px;
+    margin-top: -50vw;
+
 
   }
 
@@ -180,6 +180,10 @@
   }
  .what-paper-section{
   margin-top: -550px;
+ }
+
+ .what-paper-section img{
+   height: 60vw;
  }
   .what-paper-text {
     font-size: 15px;
@@ -197,7 +201,7 @@
   .yellow-section{
     width: 100vw;
     overflow: clip;
-    margin-top: 50px;
+    margin-top: -5vw;
     height: 500px;
    
    
@@ -208,11 +212,14 @@
   .yellow-section p{
     font-size: 15px;
   }
-  .yellow-section-img{
+  .yellow-section-img {
     width: 75vw;
     height: 150px;
-    margin-left: 20px;
+  
     overflow: clip;
+  }
+  .yellow-section-img img{
+    margin-left: -10vw;
   }
   .white-section{
     width: 100vw;
