--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -79,8 +79,8 @@
 .hero-statistics {
   width: 100vw;
   display: flex;
-  flex-direction: column; /* Stack items vertically */
-  align-items: center; /* Center items horizontally */
+  flex-direction: column; 
+  align-items: center; 
   margin-top: 350px;
   gap: 0;
 }
