--- a/src/styles/Joinmove.css
+++ b/src/styles/Joinmove.css
@@ -575,7 +575,7 @@ flex-direction: column;
   .potrait {
     width: 40vw;
     height: 50vw;
-    margin-top: -25vw;
+    margin-top: -27vw;
   }
 
   .red {
@@ -611,7 +611,7 @@ flex-direction: column;
 @media (max-width: 480px) {
   .second {
     align-items: center;
-    height:100vw; 
+    height:110vw; 
     display: flex;
     margin-top: 0;
   }
@@ -671,7 +671,7 @@ flex-direction: column;
 
 @media (max-width: 480px) {
   .third {
-    height: 90vw;
+    height: 100vw;
     margin-top: 0;
   }
 
@@ -744,7 +744,7 @@ flex-direction: column;
   height: 5vw;
  }
  .black{
-  height: 120vw;
+  height: 130vw;
  }
   .black p {
     font-size: 7vw;
@@ -753,17 +753,21 @@ flex-direction: column;
   .para {
     font-size: 3vw;
     display: block;
-    padding-left: 3vw;
-    padding-right: 3vw;
+  
    
   }
   
   .p-div {
     width: 100vw;
+  
+  
 
   }
   .p-div p{
     font-size: 3vw;
+    text-align: center;
+    padding-left: 2vw;
+    padding-right: 3vw;
   }
   .count{
     
@@ -862,7 +866,7 @@ margin-left: -5vw;
 
 @media (max-width: 480px) {
   .six {
-    height: 120vw; 
+    height: 130vw; 
     margin-top: 23vw;
   }
 
