--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -4,7 +4,56 @@
   width: 100vw;
   margin: 0;
 }
+.hero{
 
+}
+Link{
+  text-decoration: none;
+}
+.hero-nav {
+  position: absolute;
+  top: 10px;
+  right: 60px;
+  z-index: 2;
+}
+
+.nav-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  position: absolute;
+  top: 10px;
+  left: 3vw;
+ 
+}
+
+.toggle-bar {
+  width: 30px;
+  height: 4px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li {
+  color: white;
+  font-size: 1.3vw;
+  font-weight: 600;
+  font-family: 'CabinetGrotesk', sans-serif;
+  cursor: pointer;
+}
+
+.nav-links li:hover {
+  text-decoration: none;
+}
 .hero-background {
   width: 100vw;
   height: 800px;
@@ -22,14 +71,14 @@
   background-color: #FCD600;
   position: absolute;
   z-index: 1;
-  left: 80px;
+ 
   top: -15px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   
   border-radius: 20px;
-  margin-left: 57vw;
+ 
 
 }
 
@@ -141,7 +190,7 @@
   .hero-registrations {
     width: 65vw;
     height: 50px;
-    margin-left: 10vw;
+  
     margin-top: 30px;
     border-radius: 5px;
   }
@@ -156,6 +205,32 @@
     font-size: 12px;
     margin-top: -5px;
   
+  }
+  .nav-toggle {
+    display: flex;
+    
+  
+  }
+ .hero-nav{
+ }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    top: 50px;
+    right: 1vw;
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .nav-links li {
+    font-size: 16px;
+    margin: 5px 0;
   }
 
   .hero-content {
