--- a/src/styles/Joinmove.css
+++ b/src/styles/Joinmove.css
@@ -8,6 +8,50 @@
   display: flex;
   color: white;
 }
+.hero-nav {
+  position: absolute;
+  top: 10px;
+  right: 60px;
+  z-index: 2;
+}
+
+.nav-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  position: absolute;
+  top: 10px;
+  left: 3vw;
+ 
+}
+
+.toggle-bar {
+  width: 30px;
+  height: 4px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li {
+  color: white;
+  font-size: 1.3vw;
+  font-weight: 600;
+  font-family: 'CabinetGrotesk', sans-serif;
+  cursor: pointer;
+}
+
+.nav-links li:hover {
+  text-decoration: none;
+}
 .left{
   width: 50vw;
  padding-left: 10vw;
@@ -555,6 +599,33 @@ flex-direction: column;
     height: 70vw;
     margin-top: 0;
     justify-content: space-between;
+  }
+  
+  .nav-toggle {
+    display: flex;
+    
+  
+  }
+ .hero-nav{
+ }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    top: 50px;
+    right: 1vw;
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .nav-links li {
+    font-size: 16px;
+    margin: 5px 0;
   }
 
   .left {
