--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -87,7 +87,7 @@ Link{
   background-color: #FCD600;
   position: absolute;
   z-index: 1;
-  margin-left: -50vw;
+  margin-left: -47vw;
   top: -15px;
   display: flex;
   justify-content: space-around;
@@ -212,7 +212,6 @@ Link{
   .hero-registrations {
     width: 65vw;
     height: 50px;
-  
     margin-top: 30px;
     border-radius: 5px;
   }
@@ -256,7 +255,7 @@ Link{
   }
 
   .hero-content {
-    left: 14vw;
+   
     top: 120px;
     font-size: 15px;
   }
@@ -308,6 +307,7 @@ Link{
   }
 
   .hero-badge {
+    display: none;
     width: 100px;
     height: 100px;
  
@@ -316,7 +316,7 @@ Link{
 
   .hero-main-image {
     width: 100vw;
-   
+   display: none;
     margin-top:-6vw;
   }
   .hero-images{
