--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -211,6 +211,8 @@ Link{
     height: 50px;
     margin-top: 30px;
     border-radius: 5px;
+    padding-left: 2vw;
+    padding-right: 2vw;
   }
 
   .hero-registrations h1 {
