--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -179,24 +179,28 @@ Link{
 .hero-images {
   display: flex;
   gap: 5vw; 
-  margin-top: 2vw; 
+  font-family: ; 
+  font-family: 'CoveredByYourGrace', cursive;
+  font-size: 3vw;
+}
+
+
+
+.countdown{
+   width: 10vw;
+   height: 30vh;
+   background-image:url('../assets/Group\ 64.svg');
+   text-align: center;
+   color: #FCD600;  
+   font-weight: 900;
 
 }
 
-.hero-badge {
-  width: 300px;
-  height: 300px;
-  gap: 0; 
-  margin-top: -150px; 
-  
+.countdown-number{
+  color: #ed444b;
 }
 
-.hero-main-image {
-  width: 100vw;
-  gap: 0; 
-  margin-top: -260px; 
 
-}
 
 
 @media (max-width: 480px) {
@@ -304,20 +308,49 @@ Link{
     margin-left: -130px;
   }
 
-  .hero-badge {
-    display: none;
-    width: 100px;
-    height: 100px;
  
-    margin-top: -250px;
+  .hero-images {
+     width: 100vw;
+     height: 20vh;
+    display: flex;
+    gap: 5vw; 
+    font-family: ; 
+    font-family: 'CoveredByYourGrace', cursive;
+    font-size: 3vw;
+     text-align: center;
+     align-items: center;
+     justify-content: center;
   }
+  
+  
+  
+  .countdown{
+     width: 25vw;
+     height: 20vh;
+     background-image:url('../assets/Group\ 64.svg');
+     background-size: contain; /* Scales the image to fit the container while maintaining its aspect ratio */
+     background-position: center; /* Centers the background image */
+     background-repeat: no-repeat; 
+     text-align: center;
+     color: #FCD600;  
+     font-weight: 900;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     font-size: 5vw;
+  
+  }
+  
+  .countdown-number{
+    color: #ed444b;
+ 
+  }
+  
+  .countdown p{
+  
+  }
+  
 
-  .hero-main-image {
-    width: 100vw;
-   display: none;
-    margin-top:-6vw;
-  }
-  .hero-images{
-    margin-top: 170px;
-  }
+  
 }
