--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,5 +1,4 @@
 
-
 .hero-container {
   width: 100vw;
   margin: 0;
@@ -179,27 +178,29 @@ Link{
 
 .hero-images {
   display: flex;
-  flex-direction: column; 
+  gap: 5vw; 
 
-  gap: 0; 
-  margin-top: 0; 
+  font-family: 'CoveredByYourGrace', cursive;
+  font-size: 3vw;
+}
+
+
+
+.countdown{
+   width: 10vw;
+   height: 30vh;
+   background-image:url('../assets/Group\ 64.svg');
+   text-align: center;
+   color: #FCD600;  
+   font-weight: 900;
 
 }
 
-.hero-badge {
-  width: 300px;
-  height: 300px;
-  gap: 0; 
-  margin-top: -150px; 
-  
+.countdown-number{
+  color: #ed444b;
 }
 
-.hero-main-image {
-  width: 100vw;
-  gap: 0; 
-  margin-top: -260px; 
 
-}
 
 
 @media (max-width: 480px) {
@@ -214,6 +215,8 @@ Link{
     height: 50px;
     margin-top: 30px;
     border-radius: 5px;
+    padding-left: 2vw;
+    padding-right: 2vw;
   }
 
   .hero-registrations h1 {
@@ -227,14 +230,7 @@ Link{
     margin-top: -5px;
   
   }
-  .nav-toggle {
-    display: flex;
-    
-  
-  }
- .hero-nav{
- 
- }
+
 
  .nav-links {
   display: flex;
@@ -287,7 +283,7 @@ Link{
   }
 
   .hero-count-image {
-    margin-left: 30px;
+    
     width: 250px;
     height: 100px;
     margin-top: -70px;
@@ -303,23 +299,52 @@ Link{
   .hero-stats-text p{
     width: 50vw;
     margin-top: -130px;
-    margin-left: -90px;
+    margin-left: -130px;
   }
 
-  .hero-badge {
-    display: none;
-    width: 100px;
-    height: 100px;
  
-    margin-top: -250px;
+  .hero-images {
+     width: 100vw;
+     height: 20vh;
+    display: flex;
+    gap: 5vw; 
+    font-family: 'CoveredByYourGrace', cursive;
+    font-size: 3vw;
+     text-align: center;
+     align-items: center;
+     justify-content: center;
   }
+  
+  
+  
+  .countdown{
+     width: clamp(100px,25vw,200px);
+     min-height: 30vh;
+     background-image:url('../assets/Group\ 64.svg');
+     background-size: contain; /* Scales the image to fit the container while maintaining its aspect ratio */
+     background-position: center; /* Centers the background image */
+     background-repeat: no-repeat; 
+     text-align: center;
+     color: #FCD600;  
+     font-weight: 900;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     font-size: 1rem;
+  
+  }
+  
+  .countdown-number{
+    color: #ed444b;
+    font-size:10vw;
+ 
+  }
+  
+  .countdown p{
+  
+  }
+  
 
-  .hero-main-image {
-    width: 100vw;
-   display: none;
-    margin-top:-6vw;
-  }
-  .hero-images{
-    margin-top: 170px;
-  }
+  
 }
