--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -179,9 +179,8 @@ Link{
 .hero-images {
   display: flex;
   gap: 5vw; 
-
   font-family: 'CoveredByYourGrace', cursive;
-  font-size: 3vw;
+  
 }
 
 
@@ -189,15 +188,17 @@ Link{
 .countdown{
    width: 10vw;
    height: 30vh;
-   background-image:url('../assets/Group\ 64.svg');
+   background-image:url('../assets/Group\ 64.webp');
    text-align: center;
    color: #000000;  
-   font-weight: 900;
-
+   background-repeat: no-repeat; 
+   font-size: 2vw;
 }
 
 .countdown-number{
   color: #ed444b;
+  font-size: 5rem;
+  font-weight: 900;
 }
 
 
@@ -320,13 +321,13 @@ Link{
   .countdown{
      width: clamp(100px,25vw,200px);
      min-height: 30vh;
-     background-image:url('../assets/Group\ 64.svg');
-     background-size: contain; /* Scales the image to fit the container while maintaining its aspect ratio */
-     background-position: center; /* Centers the background image */
+     background-image:url('../assets/Group\ 64.webp');
+     background-size: contain; 
+     background-position: center; 
      background-repeat: no-repeat; 
      text-align: center;
      color: #000000;  
-     font-weight: 900;
+     
      display: flex;
      flex-direction: column;
      align-items: center;
