--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -103,19 +103,21 @@ Link{
   font-weight: 900;
 }
 
-.hero-registrations button {
+.hero-registrationsbutton button {
   width: 150px;
   height: 50px;
   border-radius: 10px;
-  background-color: #ed444b;
-  color: white;
+  background-color:#FCD600;
+  font-size: 1vw;
+  color: rgb(255, 255, 255);
   border: none;
   font-family: 'CabinetGrotesk', sans-serif;
   box-shadow: 0 4px 6px rgba(41, 39, 39, 0.2), 0 2px 4px rgba(255, 255, 255, 0.15);
   transition: box-shadow 0.3s, transform 0.3s;
+  font-weight: 400;
 }
-.hero-registrations button:hover,
-.hero-registrations button:focus {
+.hero-registrationsbutton button:hover,
+.hero-registrationsbutton button:focus {
   box-shadow: 0 0.5em 0.5em -0.4em rgba(255, 255, 255, 0.2);
   transform: translateY(-0.25em);
 }
@@ -123,6 +125,7 @@ Link{
 .hero-content {
   display: flex;
   flex-direction: column;
+  margin-top: -5vh;
   align-items: center;
   position: absolute;
   z-index: 1;
@@ -164,6 +167,7 @@ Link{
 
 .hero-count-image {
   width: 100%; 
+  margin-top: -6vh;
 }
 
 .hero-stats-text {
@@ -175,6 +179,7 @@ Link{
   font-size: 30px;
   color: white; 
   text-align: center;
+  margin-top: -4vh;
 }
 
 .hero-images {
@@ -189,11 +194,13 @@ Link{
 
 .countdown{
    width: 10vw;
-   height: 30vh;
+   height: 28vh;
    background-image:url('../assets/Group\ 64.svg');
    text-align: center;
    color: #FCD600;  
    font-weight: 900;
+   background-repeat: no-repeat; 
+   margin-top: 5vh;
 
 }
 
@@ -224,9 +231,9 @@ Link{
     font-size: 12px;
   }
 
-  .hero-registrations button {
+  .hero-registrationsbutton button {
     width: 30vw;
-    height: 25px;
+    height: 28px;
     font-size: 12px;
     margin-top: -5px;
   
@@ -249,6 +256,9 @@ Link{
     font-size: 16px;
     padding-top: 2vw;
 
+  }
+  .hero-image-container{
+    margin-top: -12vw;
   }
 
   .hero-content {
@@ -287,13 +297,13 @@ Link{
     
     width: 250px;
     height: 100px;
-    margin-top: -70px;
+    margin-top: -15vh;
   }
 
   .hero-stats-text {
    
     font-size: 17px;
-    margin-top: 65px;
+    margin-top: 50px;
     margin-left: 70px;
   }
 
@@ -333,6 +343,7 @@ Link{
      align-items: center;
      justify-content: center;
      font-size: 1rem;
+     margin-top: -5vw;
   
   }
   
