tinkherhack 3.0 impact added

--- a/src/styles/Impact.css
+++ b/src/styles/Impact.css
@@ -38,6 +38,7 @@
   font-weight: 700;
   text-align: center;
   color: #ffffff;
+  font-family: 'CoveredByYourGrace', cursive;
 }
 
 .impact-summary-grid {
